security: Load Granted Authorities from OAuth2 scopes in Resource Server